# person_detection

./: .gitignore  sdkconfig.old
main/: CMakeLists.txt  app_camera_esp.c  app_camera_esp.h  custom_images.c  custom_images.h  esp_cli.c  esp_main.h  idf_component.yml  image_provider.cc  led_strip_encoder.c  main_functions.cc  main_functions.h
